testsuite/tests/typing-modules-bugs/pr6427_bad.compilers.reference
File "pr6427_bad.ml", line 13, characters 13-65:
13 |   module X = (val if !flag then (module A) else (module B) : S.T)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression creates fresh types.
       It is not allowed inside applicative functors.
